<resources>
    <string name="app_name">YiQiZhuangXiu</string>
    <string name="main_title_text">搜索用户/帖子</string>
    <string name="main_title_place_text">成都</string>
    <string name="zhuangxiugongsi">装修公司</string>
    <string name="zhjiancaijiaju">建材家具</string>
    <string name="xiaoguotu">效果图</string>
    <string name="zizhuxiadan">自助下单</string>
    <string name="shejiliangfang">设计/量房</string>
    <string name="main_list_artilce">装修学堂</string>
    <string name="artcle_item_time">精选自北京装修论坛></string>
    <string name="scan">172</string>
    <string name="comments">17</string>
    <string name="auther">作者</string>
    <string name="auther_time">16小时前</string>
    <string name="jiaguanzhu" >加关注</string>
    <string name="noMoreData">没有更多数据了~~~</string>
    <string name="no_Search_data">相关数据为空</string>
    <string name="loadDataFailedAndClickRetry">获取数据失败，点我重试</string>>
    <string name="text_great_category">null</string>
    <string name="effect_topic_left_titel">专题</string>
    <string name="effect_topic_right_titel">美图</string>
    <string name="zhuangxiuyusuan_left">装修预算</string>
    <string name="zhaungxiuyusuan_right">我的预算</string>
    <string name="effect_tag1">空间</string>
    <string name="article_bottom_text">申请装修</string>
    <string name="cancle">取消</string>
    <string name="search_textview">请输入搜索内容</string>
    <string name="search_textview_content">搜索更过内容</string>
    <string name="user">用户</string>
    <string name="tiezi">帖子</string>

    <string name="text_01">相关用户</string>>
    <string name="score_and_review2">%1$s分（%2$d人评分）</string>
    <string name="text_03">暂无搜索数据</string>
    <string name="text_04">没有更多数据了哦~~~</string>
    <string name="text_05">回帖</string>
    <string name="text_06">精选自</string>
    <string name="text_07">相关文章推荐</string>
    <string name="text_08">评论列表</string>
    <string name="text_10">让我们花10分钟了解你</string>
    <string name="text_11">——以便发现你最需要的装修内容——</string>
    <string name="effect_tag4">颜色</string>
    <string name="effect_tag3">局部</string>
    <string name="effect_tag2">风格</string>>

</resources>
