<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_recycleview_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="5dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home_school"
            android:layout_marginTop="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_list_artilce"
            android:textColor="@android:color/darker_gray"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/main_article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="titletitletitletitle"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/title_color"/>
    </LinearLayout>

    <com.facebook.drawee.view.SimpleDraweeView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/main_article_image"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:padding="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artcle_item_time"
            android:layout_marginLeft="10dp"
            android:id="@+id/artcle_item_time"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:src="@drawable/looked_hui"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_article_item_scan"
            android:text="@string/scan"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/looked_hui"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_article_item_comments"
            android:text="@string/comments"/>
    </LinearLayout>
</LinearLayout>