<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_style"
            android:layout_marginLeft="15.0dip">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:src="@drawable/kf5_img_search"
                android:layout_marginTop="3dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30.0dip"
                android:hint="@string/search_textview"
                android:layout_marginLeft="10dp"
                android:imeOptions="actionSearch"
                android:id="@+id/search_textview"
                android:textSize="17dp"
                android:background="@drawable/edit_text_style"/>


            <ImageButton
                android:id="@+id/search_cancle_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="3dp"
                android:src="@drawable/search_result_cancel"
                android:visibility="gone"/>
        </LinearLayout>
        <Button
            android:id="@+id/search_cancle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/cancle"
            android:textColor="@color/search_text"
            android:textSize="20dp"
            android:background="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mine_color"/>
    <LinearLayout
        android:id="@+id/search_linearlayout_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="250dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="bottom|center"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_textview_content"
                        android:textSize="25dp"/>
                    <View
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/mine_color"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/kf5_emoji_1f60e"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user"
                            android:layout_marginTop="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/kf5_emoji_1f61b"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tiezi"
                            android:layout_marginTop="10dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <com.cjj.MaterialRefreshLayout
        android:id="@+id/refreshLayout_search"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white">


        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/search_recycleview">

        </android.support.v7.widget.RecyclerView>
    </com.cjj.MaterialRefreshLayout>
</LinearLayout>
    
