<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <LinearLayout
            android:id="@+id/zhuangxiugonsi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/home_feature_package_new"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhuangxiugongsi"
                android:layout_marginTop="5dp"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tongchenghuodong"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/home_feature_activity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhuangxiugongsi"
                android:layout_marginTop="5dp"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/zhuangxiuxuetang"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/home_feature_school"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhuangxiugongsi"
                android:layout_marginTop="5dp"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/zhuangxiuyusuan"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/home_feature_my_budget"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhuangxiugongsi"
                android:layout_marginTop="5dp"
                android:textSize="15dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:id="@+id/jiancaijiaju"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/home_feature_category"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhjiancaijiaju"
                android:layout_marginTop="5dp"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/xiaoguotu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/home_feature_renderings_new"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaoguotu"
                android:layout_marginTop="5dp"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/zizhuxiadan"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/home_feature_self_order"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zizhuxiadan"
                android:layout_marginTop="5dp"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/shejiliangfang"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/home_feature_design_measure"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shejiliangfang"
                android:layout_marginTop="5dp"
                android:textSize="15dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>