<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_recycleview_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <com.facebook.drawee.view.SimpleDraweeView
            xmlns:fresco="http://schemas.android.com/apk/res-auto"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/main_recycleview_tie_touxiang"
            fresco:placeholderImage="@drawable/loading_placeholder"
            fresco:placeholderImageScaleType="fitCenter"
            fresco:fadeDuration="1000"
            fresco:roundAsCircle="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/auther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auther"
                android:textColor="@color/auther"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/auther_time"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auther_time"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fouces_button"
            android:layout_marginLeft="300dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_attention"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jiaguanzhu"
                android:textColor="@color/jiaguanzhu"
                android:textSize="15dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp">
        <TextView
            android:id="@+id/main_tie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我是大标题"
            android:textSize="20dp"
            android:padding="5dp"/>
    </LinearLayout>

    <com.facebook.drawee.view.SimpleDraweeView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/main_tie_image"
        fresco:placeholderImage="@drawable/loading_placeholder"
        fresco:placeholderImageScaleType="centerCrop"
        fresco:fadeDuration="1000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:padding="2dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/artcle_item_time"
            android:layout_marginLeft="10dp"
            android:id="@+id/tie_item_time"
            android:textColor="@color/tie_lianjie"
            android:textSize="15dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/looked_hui"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_tie_item_scan"
                android:text="0"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/looked_hui"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_tie_item_comments"
                android:text="0"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>